--- a/lib/stories_web/templates/user/index.html.eex
+++ b/lib/stories_web/templates/user/index.html.eex
@@ -1,30 +1,6 @@
-<h2>Listing Users</h2>
-
-<table class="stripped">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Img</th>
-
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-<%= for user <- @users do %>
-    <tr>
-      <td><%= user.name %></td>
-      <td><%= user.description %></td>
-      <td><%= user.img %></td>
-
-      <td class="right">
-        <span><%= link "Show", to: user_path(@conn, :show, user), class: "btn btn-default btn-xs" %></span>
-        <span><%= link "Edit", to: user_path(@conn, :edit, user), class: "btn btn-default btn-xs" %></span>
-        <span><%= link "Delete", to: user_path(@conn, :delete, user), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs" %></span>
-      </td>
-    </tr>
+<h2>USER PAGE</h2>
+<%= if @current_user do %>
+  Hello, <%= @current_user.name %>
+<% else %>
+  <span><%= link "New User", to: user_path(@conn, :new) %></span>
 <% end %>
-  </tbody>
-</table>
-
-<span><%= link "New User", to: user_path(@conn, :new) %></span>
