Fix materializecss cdn link

--- a/lib/stories_web/templates/layout/app.html.eex
+++ b/lib/stories_web/templates/layout/app.html.eex
@@ -8,20 +8,19 @@
     <meta name="author" content="kamyl">
 
     <title>Stories!</title>
-    <link
-      rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.1002/css/materialize.min.css"
-    >
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
   </head>
 
   <body>
+    <div class="container">
       <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
       <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
 
       <main role="main">
         <%= render @view_module, @view_template, assigns %>
       </main>
-
+    </div>
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
   </body>
 </html>
