--- a/lib/stories_web/templates/user/show.html.eex
+++ b/lib/stories_web/templates/user/show.html.eex
@@ -1,23 +1,49 @@
-<h2>Show User</h2>
+<div class="container view">
+  <div class="row">
+    <section class="col s12 m3 l3 bio">
+      <div class="bio__img-container">
+        <%= img_tag(@user.img, class: "responsive-img bio__img") %>
+      </div>
+      <h3 class="bio__name">
+        <%= @user.name %>
+      </h3>
+      <p class="bio__description">
+        <%= @user.description %>
+      </p>
+    </section>
+    <section class="col s12 m9 l9 showcase">
+      <div class="row">
+        <div class="col s12">
+          <ul class="tabs tabs-fixed-width">
+            <li class="tab">
+              <a href="#user-overview" class="active">Overview</a>
+            </li>
+            <li class="tab blue-darken-4-text">
+              <a href="#user-stories">Stories</a>
+            </li>
+            <li class="tab">
+              <a href="#user-followers">Followers</a>
+            </li>
+            <li class="tab">
+              <a href="#user-following">Following</a>
+            </li>
+          </ul>
+        </div>
 
-<ul>
+        <div class="col s12 showcase__content" id="user-overview">
+          Overview
+        </div>
+        <div class="col s12 showcase__content" id="user-stories">
+          Stories
+        </div>
+        <div class="col s12 showcase__content" id="user-followers">
+          Followers
+        </div>
+        <div class="col s12 showcase__content" id="user-following">
+          Following
+        </div>
+      </div>
+    </section>
 
-  <li>
-    <strong>Name:</strong>
-    <%= @user.name %>
-  </li>
-
-  <li>
-    <strong>Description:</strong>
-    <%= @user.description %>
-  </li>
-
-  <li>
-    <strong>Img:</strong>
-    <%= @user.img %>
-  </li>
-
-</ul>
-
-<span><%= link "Edit", to: user_path(@conn, :edit, @user) %></span>
-<span><%= link "Back", to: user_path(@conn, :index) %></span>
+  </div>
+</div>
