--- a/lib/stories_web/templates/user/show.html.eex
+++ b/lib/stories_web/templates/user/show.html.eex
@@ -14,18 +14,26 @@
     <section class="col s12 m9 l9 showcase">
       <div class="row">
         <div class="col s12">
-          <ul class="tabs tabs-fixed-width">
+          <ul class="tabs tabs-fixed-width secondary-nav">
             <li class="tab">
-              <a href="#user-overview" class="active">Overview</a>
-            </li>
-            <li class="tab blue-darken-4-text">
-              <a href="#user-stories">Stories</a>
-            </li>
-            <li class="tab">
-              <a href="#user-followers">Followers</a>
+              <a href="#user-overview" class="grey-text text-darken-4">
+                Overview
+              </a>
             </li>
             <li class="tab">
-              <a href="#user-following">Following</a>
+              <a href="#user-stories" class="grey-text text-darken-4">
+                Stories
+              </a>
+            </li>
+            <li class="tab">
+              <a href="#user-followers" class="grey-text text-darken-4">
+                Followers
+              </a>
+            </li>
+            <li class="tab">
+              <a href="#user-following" class="grey-text text-darken-4">
+                Following
+              </a>
             </li>
           </ul>
         </div>
