--- a/lib/stories_web/templates/post/form.html.eex
+++ b/lib/stories_web/templates/post/form.html.eex
@@ -12,7 +12,7 @@
   </div>
 
   <div class="form-group">
-    <%= select f, :category, ["other", "technology", "lifestyle", "politics", "culture", "media", "design"] %>
+    <%= select f, :category, ["technology", "lifestyle", "politics", "culture", "media", "design", "other"] %>
   </div>
 
   <div class="form-group">
