--- a/lib/stories_web/templates/post/index.html.eex
+++ b/lib/stories_web/templates/post/index.html.eex
@@ -6,6 +6,7 @@
       <th>Title</th>
       <th>Category</th>
       <th>Content</th>
+      <th>Owner's ID</th>
 
       <th></th>
     </tr>
@@ -16,11 +17,12 @@
       <td><%= post.title %></td>
       <td><%= post.category %></td>
       <td><%= post.content %></td>
+      <td><%= post.user_id %></td>
 
       <td class="text-right">
         <span><%= link "Show", to: post_path(@conn, :show, post), class: "btn btn-default btn-xs" %></span>
         <span><%= link "Edit", to: post_path(@conn, :edit, post), class: "btn btn-default btn-xs" %></span>
-        <span><%= link "Delete", to: post_path(@conn, :delete, post), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs" %></span>
+        <span><%= link "Delete", to: post_path(@conn, :delete, post), method: :delete, class: "btn btn-danger btn-xs" %></span>
       </td>
     </tr>
 <% end %>
